--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "lightningcss": "^1.30.2",
     "typescript": "~5.9.3",
     "vite": "7.1.12"
@@ -16,6 +17,7 @@
   "dependencies": {
     "@types/wicg-file-system-access": "^2023.10.7",
     "emmet-monaco-es": "^5.6.1",
+    "jsonc-parser": "^3.3.1",
     "monaco-editor": "^0.54.0",
     "vscode-oniguruma": "^2.0.1",
     "vscode-textmate": "^9.2.1"
