--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "devDependencies": {
     "@types/bun": "^1.3.3",
     "@types/node": "^24.10.1",
+    "@types/picomatch": "^4.0.2",
     "lightningcss": "^1.30.2",
     "typescript": "~5.9.3",
     "vite": "7.1.12",
-    "vscode-languageserver-types": "^3.17.5",
     "vscode-css-languageservice": "6.2.14",
     "vscode-html-languageservice": "5.2.0",
     "vscode-json-languageservice": "5.3.11",
     "vscode-languageserver-textdocument": "^1.0.11",
+    "vscode-languageserver-types": "^3.17.5",
     "vscode-uri": "^3.1.0"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "emmet-monaco-es": "^5.6.1",
     "jsonc-parser": "^3.3.1",
     "monaco-editor-core": "^0.55.1",
+    "picomatch": "^4.0.3",
     "vscode-oniguruma": "^2.0.1",
     "vscode-textmate": "^9.2.1"
   }
