--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@types/wicg-file-system-access": "^2023.10.7",
-    "emmet-monaco-es": "^5.6.1",
+    "emmet-monaco-core-es": "^5.6.1",
     "jsonc-parser": "^3.3.1",
     "monaco-editor-core": "^0.55.1",
     "picomatch": "^4.0.3",
