--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "bun run compile-workers && bun run compile-extensions && tsc && vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "compile-workers": "bun scripts/compile-workers.ts",
-    "compile-extensions": "bun scripts/compile-extensions.ts"
+    "compile-languages": "bun scripts/compile-languages.ts",
+    "download-languages": "bun scripts/download-languages.ts",
+    "format": "bunx --bun prettier --write .",
+    "postinstall": "bun run compile-workers && bun run download-languages && bun run compile-languages"
   },
   "devDependencies": {
     "@types/bun": "^1.3.3",
+    "@types/degit": "^2.8.6",
     "@types/node": "^24.10.1",
     "@types/picomatch": "^4.0.2",
+    "degit": "^2.8.4",
     "lightningcss": "^1.30.2",
     "typescript": "~5.9.3",
     "vite": "7.1.12",
@@ -30,6 +35,7 @@
     "jsonc-parser": "^3.3.1",
     "monaco-editor-core": "^0.55.1",
     "picomatch": "^4.0.3",
+    "prettier": "^3.7.1",
     "vscode-oniguruma": "^2.0.1",
     "vscode-textmate": "^9.2.1"
   }
