bug fixing and code organizing

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 basic-languages-out
 basic-languages
 src/language-support/main.ts
+public/workers
 *.local
 
 # Editor directories and files
