--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/picomatch": "^4.0.2",
     "degit": "^2.8.4",
     "lightningcss": "^1.30.2",
+    "rolldown-vite": "^7.3.0",
     "typescript": "~5.9.3",
     "vite": "7.1.12",
     "vscode-css-languageservice": "6.2.14",
